@@ -424,110 +424,15 @@
                 </ol></p>
             </statement>
             <proof>
-                <p>To prove that <m>T</m> is linearly independent, begin with a relation of linear dependence on <m>T</m>, <me>\zerovector= \alpha_1\vect{v}_{d_1}+\alpha_2\vect{v}_{d_2}+\alpha_3\vect{v}_{d_3}+\ldots+\alpha_r\vect{v}_{d_r}</me> and we will try to conclude that the only possibility for the scalars <m>\alpha_i</m> is that they are all zero. Denote the non-pivot columns of <m>B</m> by <m>F=\set{\scalarlist{f}{n-r}}</m>.  Then we can preserve the equality by adding a big fat zero to the linear combination, <me>\zerovector= \alpha_1\vect{v}_{d_1}+\alpha_2\vect{v}_{d_2}+\alpha_3\vect{v}_{d_3}+\ldots+\alpha_r\vect{v}_{d_r}+ 0\vect{v}_{f_1}+0\vect{v}_{f_2}+0\vect{v}_{f_3}+\ldots+0\vect{v}_{f_{n-r}}</me>.</p>
-                <p>By <xref ref="theorem-SLSLC" acro="SLSLC" autoname="yes"/>, the scalars in this linear combination (suitably reordered) are a solution to the homogeneous system <m>\homosystem{A}</m>.  But notice that this is the solution obtained by setting each free variable to zero.   If we consider the description of a solution vector in the conclusion of <xref ref="theorem-VFSLS" acro="VFSLS" autoname="yes"/>, in the case of a homogeneous system, then we see that if all the free variables are set to zero the resulting solution vector is trivial (all zeros).   So it must be that <m>\alpha_i=0</m>, <m>1\leq i\leq r</m>.  This implies by <xref ref="definition-LICV" acro="LICV" autoname="yes"/> that <m>T</m> is a linearly independent set.</p>
+                <p>To prove that <m>T</m> is linearly independent, begin with a relation of linear dependence on <m>T</m>, <me>\alpha_1\vect{v}_{d_1}+\alpha_2\vect{v}_{d_2}+\alpha_3\vect{v}_{d_3}+\ldots+\alpha_r\vect{v}_{d_r}=\zerovector</me> and we will conclude that the only possibility for the scalars <m>\alpha_i</m> is that they are all zero. Denote the non-pivot columns of <m>B</m> by <m>F=\set{\scalarlist{f}{n-r}}</m>.  Then we can preserve the equality by adding a big fat zero to the linear combination, <me>\alpha_1\vect{v}_{d_1}+\alpha_2\vect{v}_{d_2}+\alpha_3\vect{v}_{d_3}+\ldots+\alpha_r\vect{v}_{d_r}+ 0\vect{v}_{f_1}+0\vect{v}_{f_2}+0\vect{v}_{f_3}+\ldots+0\vect{v}_{f_{n-r}}=\zerovector</me>.</p>
+                <p>By <xref ref="theorem-SLSLC" acro="SLSLC" autoname="yes"/>, the scalars in this linear combination are a solution to the homogeneous system <m>\homosystem{A}</m>, when suitably reordered to match the order of the columns of <m>A</m>.  But notice that this is the solution obtained by setting each free variable to zero.   If we consider the description of a solution vector in the conclusion of <xref ref="theorem-VFSLS" acro="VFSLS" autoname="yes"/>, in the case of a homogeneous system, then we see that if all the free variables are set to zero the resulting solution vector is the zero vector.   So it must be that <m>\alpha_i=0</m>, <m>1\leq i\leq r</m>.  This implies by <xref ref="definition-LICV" acro="LICV" autoname="yes"/> that <m>T</m> is a linearly independent set.</p>
                 <p>The second conclusion of this theorem is an equality of sets (<xref ref="definition-SE" acro="SE" autoname="yes"/>).  Since <m>T</m> is a subset of <m>S</m>, any linear combination of elements of the set <m>T</m> can also be viewed as a linear combination of elements of the set <m>S</m>.  So <m>\spn{T}\subseteq\spn{S}=W</m>.  It remains to prove that <m>W=\spn{S}\subseteq\spn{T}</m>.</p>
-                <p>For each <m>k</m>, <m>1\leq k\leq n-r</m>, form a solution <m>\vect{x}</m> to <m>\homosystem{A}</m> by setting the free variables as follows:<md>
-                    <mrow>x_{f_1}&amp;=0
-                    &amp;
-                    x_{f_2}&amp;=0
-                    &amp;
-                    x_{f_3}&amp;=0
-                    &amp;
-                    \ldots&amp;
-                    &amp;
-                    x_{f_k}&amp;=1
-                    &amp;
-                    \ldots&amp;
-                    &amp;
-                    x_{f_{n-r}}&amp;=0</mrow>
-                </md>.</p>
-                <p>By <xref ref="theorem-VFSLS" acro="VFSLS" autoname="yes"/>, the remainder of this solution vector is given by,<md>
-                    <mrow>x_{d_1}&amp;=-\matrixentry{B}{1,f_k}
-                    &amp;
-                    x_{d_2}&amp;=-\matrixentry{B}{2,f_k}
-                    &amp;
-                    x_{d_3}&amp;=-\matrixentry{B}{3,f_k}
-                    &amp;
-                    \dots&amp;
-                    &amp;
-                    x_{d_r}&amp;=-\matrixentry{B}{r,f_k}</mrow>
-                </md>.</p>
-                <p>From this solution, we obtain a relation of linear dependence on the columns of <m>A</m>, <me>-\matrixentry{B}{1,f_k}\vect{v}_{d_1}
-                -\matrixentry{B}{2,f_k}\vect{v}_{d_2}
-                -\matrixentry{B}{3,f_k}\vect{v}_{d_3}
-                -\ldots
-                -\matrixentry{B}{r,f_k}\vect{v}_{d_r}
-                +1\vect{v}_{f_k}
-                =\zerovector</me>which can be arranged as the equality<me>\vect{v}_{f_k}=
-                \matrixentry{B}{1,f_k}\vect{v}_{d_1}+
-                \matrixentry{B}{2,f_k}\vect{v}_{d_2}+
-                \matrixentry{B}{3,f_k}\vect{v}_{d_3}+
-                \ldots+
-                \matrixentry{B}{r,f_k}\vect{v}_{d_r}</me>.</p>
-                <p>Now, suppose we take an arbitrary element, <m>\vect{w}</m>, of <m>W=\spn{S}</m> and write it as a linear combination of the elements of <m>S</m>, but with the terms organized according to the indices in <m>D</m> and <m>F</m><md>
-                    <mrow>\vect{w}&amp;=
-                    \alpha_1\vect{v}_{d_1}+
-                    \alpha_2\vect{v}_{d_2}+
-                    \ldots+
-                    \alpha_r\vect{v}_{d_r}+
-                    \beta_1\vect{v}_{f_1}+
-                    \beta_2\vect{v}_{f_2}+
-                    \ldots+
-                    \beta_{n-r}\vect{v}_{f_{n-r}}</mrow>
-                </md>.</p>
-                <p>From the above, we can replace each <m>\vect{v}_{f_j}</m> by a linear combination of the <m>\vect{v}_{d_i}</m>, <md>
-                    <mrow>\vect{w}&amp;=
-                    \alpha_1\vect{v}_{d_1}+
-                    \alpha_2\vect{v}_{d_2}+
-                    \ldots+
-                    \alpha_r\vect{v}_{d_r}+</mrow>
-                    <mrow>&amp;\beta_1\left(
-                    \matrixentry{B}{1,f_1}\vect{v}_{d_1}+
-                    \matrixentry{B}{2,f_1}\vect{v}_{d_2}+
-                    \matrixentry{B}{3,f_1}\vect{v}_{d_3}+
-                    \ldots+
-                    \matrixentry{B}{r,f_1}\vect{v}_{d_r}
-                    \right)+</mrow>
-                    <mrow>&amp;\beta_2\left(
-                    \matrixentry{B}{1,f_2}\vect{v}_{d_1}+
-                    \matrixentry{B}{2,f_2}\vect{v}_{d_2}+
-                    \matrixentry{B}{3,f_2}\vect{v}_{d_3}+
-                    \ldots+
-                    \matrixentry{B}{r,f_2}\vect{v}_{d_r}
-                    \right)+</mrow>
-                    <mrow>&amp;\quad\quad\vdots</mrow>
-                    <mrow>&amp;\beta_{n-r}\left(
-                    \matrixentry{B}{1,f_{n-r}}\vect{v}_{d_1}+
-                    \matrixentry{B}{2,f_{n-r}}\vect{v}_{d_2}+
-                    \matrixentry{B}{3,f_{n-r}}\vect{v}_{d_3}+
-                    \ldots+
-                    \matrixentry{B}{r,f_{n-r}}\vect{v}_{d_r}
-                    \right)</mrow>
-                    <intertext>With repeated applications of several of the properties of <xref ref="theorem-VSPCV" acro="VSPCV" autoname="yes"/> we can rearrange this expression as</intertext>
-                    <mrow>=&amp;\ \left(
-                    \alpha_1+
-                    \beta_1\matrixentry{B}{1,f_1}+
-                    \beta_2\matrixentry{B}{1,f_2}+
-                    \beta_3\matrixentry{B}{1,f_3}+
-                    \ldots+
-                    \beta_{n-r}\matrixentry{B}{1,f_{n-r}}
-                    \right)\vect{v}_{d_1}+</mrow>
-                    <mrow>&amp;\left(\alpha_2+
-                    \beta_1\matrixentry{B}{2,f_1}+
-                    \beta_2\matrixentry{B}{2,f_2}+
-                    \beta_3\matrixentry{B}{2,f_3}+
-                    \ldots+
-                    \beta_{n-r}\matrixentry{B}{2,f_{n-r}}
-                    \right)\vect{v}_{d_2}+</mrow>
-                    <mrow>&amp;\quad\quad\vdots</mrow>
-                    <mrow>&amp;\left(\alpha_r+
-                    \beta_1\matrixentry{B}{r,f_1}+
-                    \beta_2\matrixentry{B}{r,f_2}+
-                    \beta_3\matrixentry{B}{r,f_3}+
-                    \ldots+\beta_{n-r}\matrixentry{B}{r,f_{n-r}}
-                    \right)\vect{v}_{d_r}</mrow>
-                </md>.  This mess expresses the vector <m>\vect{w}</m> as a linear combination of the vectors in <me>T=\set{\vect{v}_{d_1},\,\vect{v}_{d_2},\,\vect{v}_{d_3},\,\ldots\,\vect{v}_{d_r}}</me> thus saying that <m>\vect{w}\in\spn{T}</m>.  Therefore, <m>W=\spn{S}\subseteq\spn{T}</m>.</p>
+                <p>Choose <m>\vect{w}\in W</m>.  Then <m>\vect{w}</m> is a linear combination of the vectors in <m>S</m>, and thus by <xref ref="theorem-SLSLC" acro="SLSLC" autoname="yes"/> the system <m>\linearsystem{A}{\vect{w}}</m> is consistent.  The same sequence of row-operations that transforms <m>A</m> to <m>B</m> will transform the augmented matrix <m>\augmented{A}{\vect{w}}</m> into <m>\augmented{B}{\vect{w}^\prime}</m>, where <m>\vect{w}^\prime</m> is simply the entries of the final column that results from applying the sequence of row-operations to <m>\vect{w}</m>.  The solution to this system that we obtain from <xref ref="theorem-VFSLS" acro="VFSLS" autoname="yes"/> when all the free variables are set to zero is then the vector <m>\vect{c}</m> with<me>\vectorentry{\vect{c}}{i}=
+                \begin{cases}
+                0&amp;\text{if }i\in F\\
+                \vectorentry{\vect{w}^\prime}{k}&amp;\text{if }i\in D,i=d_k
+                \end{cases}</me>.</p>
+                <p>In other words, viewed as a solution to <m>\linearsystem{A}{\vect{w}}</m>, <xref ref="theorem-SLSLC" acro="SLSLC" autoname="yes"/> tells us that <m>\vect{w}</m> is a linear combination of the columns of <m>A</m> where the non-pivot columns, <m>\vect{v}_{f_1},\,\vect{v}_{f_2},\,\vect{v}_{f_3},\,\ldots\,\vect{v}_{f_{n-r}}</m>, all have zero coefficients in the linear combination.  So <m>\vect{w}</m> is a linear combination of <em>just</em> the vectors in <m>T</m>, and so <m>\vect{w}\in\spn{T}</m>, as desired.  Therefore, <m>W=\spn{S}\subseteq\spn{T}</m>, and by <xref ref="definition-SE" acro="SE" autoname="yes"/>, <m>W=\spn{T}</m>.</p>
             </proof>
         </theorem>
         <p>In <xref ref="example-COV" acro="COV" autoname="yes"/>, we tossed-out vectors one at a time.  But in each instance, we rewrote the offending vector as a linear combination of those vectors with the column indices of the pivot columns of the reduced row-echelon form of the matrix of columns.  In the proof of <xref ref="theorem-BS" acro="BS" autoname="yes"/>, we accomplish this reduction in one big step.  In <xref ref="example-COV" acro="COV" autoname="yes"/> we arrived at a linearly independent set at exactly the same moment that we ran out of free variables to exploit.  This was not a coincidence, it is the substance of our conclusion of linear independence in <xref ref="theorem-BS" acro="BS" autoname="yes"/>.</p>
@@ -572,7 +477,7 @@
                 \colvector{-1 \\ 1 \\ 3 \\ 0}
                 }</mrow>
             </md>.</p>
-            <p>Can you prove that <m>T^{\prime}</m> and <m>T^{*}</m> are linearly independent sets and <m>W=\spn{S}=\spn{T^{\prime}}=\spn{T^{*}}</m>?</p>
+            <p>Can you prove that <m>T^{\prime}</m> and <m>T^{*}</m> are linearly independent sets and <m>W=\spn{S}=\spn{T^{\prime}}=\spn{T^{*}}</m>?  You would get an early exposure to several key ideas by doing so.</p>
         </example>
         <computation xml:id="sage-RS" acro="RS">
             <title>Reducing a Span</title>
