@@ -4,6 +4,7 @@ Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
 Edit: Clarify Example NSE (Katrina Hoefflinger)
+Change: Streamline second half of the proof of Theorem BS
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
